k8s/session-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session
  labels:
    app: session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
      - name: session
        image: ${SESSION_IMAGE_URL}
        ports:
        - containerPort: 9090
