k8s/session-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-service
spec:
  selector:
    app: session
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
