k8s/backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
  - name: external-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /   # ← Rewrites /api/foo → /foo
    backendRefs:
    - name: backend-service
      port: 80
  # - matches:
  #   - path:
  #       type: Exact
  #       value: /api/philosophers
  #   filters:
  #   - type: URLRewrite
  #     urlRewrite:
  #       path:
  #         type: ReplaceFullPath
  #         replaceFullPath: /philosophers/
